# src/modules/chat/group/dto/add.member.dto.ts
@@ -1,0 +1,11 @@
+import { IsString } from 'class-validator'
+
+export class AddMemberDto {
+    
+    groupId: any
+
+    
+    userId: any
+
+    adminId: any
+}   
