# src/modules/chat/group/dto/update.group.details.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from "@nestjs/mapped-types";
+import { CreateGroupDTo } from "./create.group.dto";
+
+export class UpdateGroupDetailsDto extends PartialType(CreateGroupDTo) {}
